--- a/Assets/_Monti/Domains/Monti.asmdef
+++ b/Assets/_Monti/Domains/Monti.asmdef
@@ -6,7 +6,9 @@
         "GUID:6055be8ebefd69e48b49212b09b47b2f",
         "GUID:f0e75a0aaa537a0489b2770c44ede705",
         "GUID:807fbc746b806ce438453140547c8324",
-        "GUID:adbf05efed1bd7a48a0ae7d4ca1ed3e5"
+        "GUID:adbf05efed1bd7a48a0ae7d4ca1ed3e5",
+        "GUID:67996ca52dd364b60917f0aa1db1be50",
+        "GUID:58d44cc8e589d4b3c82e6364126b3891"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
